--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "real time chat application",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/index.js",
+    "frontend": "cd frontend && npm install && npm run build && cd ..",
+    "backend": "cd backend && npm install && cd ..",
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "repository": {
     "type": "git",
